# tugboat

./: .gitignore  DENO_BUNDLE_SUPPORT.md  DEV_MODE_CLONES_ASSESSMENT.md  ERROR.md  FIX_BUNDLER.md  GLEAM_APPS.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_ASSESSMENT.md  MIGRATION_PLAN.md  NOTICE  NSPANEL.md  README.md  REIMPL_TUGBOAT_APP_PATTERNS.md  TASK.md  TASK_ASSESS_DEV.md  VITE_DEV.md  VITE_DEV_FIX.md  WARP.md  justfile  test_urls.md
.docs/: APPSECRETS_USAGE.md  ARCHITECTURE_20250929.md  CLONE_FEATURE_README.md  CLONING.md  DEV_MODE.md  DEV_MODE_ATTEMPT2.md  DEV_VIA_JIT.md  EXTEND_CLONING_TO_APPS.md  PREFERENCES_DOCS.md  PREFERENCES_GITURLS.md  PREFERENCES_P1.md  ROUGH_DRAFT_API.md  SECRETS_VAULT_IMPLEMENTATION.md  TASK_CLONE_REPOS.md  TUGBOAT_APP_BUNDLING.md
.zed/: settings.json
app/: .gitignore  app.html  deno.json  package.json  rsbuild.config.ts
app/src/: App.tsx  AppDevMode.tsx  AppInput.tsx  AppLogsPane.tsx  AppPreferences.tsx  AppSecrets.tsx  MountDevApp.tsx  MountProdApp.tsx  app_devmode.js  app_input.js  app_preferences.js  funcs.ts  index.html  lib.tsx  mount_utils.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: bundler.rs  commands.rs  devmode.rs  devserver.rs  encryptions.rs  git_clone.rs  git_url_parser.rs  jsrun.rs  lib.rs  main.rs  secrets_vault.rs  window.rs
app/src-tauri/src/js_app_bases/: mod.rs  npm_vite.rs  utils.rs
app/src-tauri/src/kv/: client.rs  commands.rs  mod.rs  types.rs
app/src-tauri/tests/: git_url_parser_test.rs
app/src/assets/: bundle.js
app/src/assets/core/: mod.d.ts  mod.js  mod.js.map
app/src/common/: AppSecretsContext.tsx  Monaco.tsx  secrets_internal.ts
app/src/design/: Frame.tsx  buttons.ts  content.ts  text.ts
app/src/types/: tauri.d.ts
pkgs/core/: .npmignore  README.md  package.json  tsconfig.json  tsup.config.ts
pkgs/core/src/: input.ts  kv.ts  mod.ts  secrets.ts
pkgs/react/: PKG_REACT_PLAN.md  package.json  tsup.config.ts
pkgs/react/src/: index.ts  useKV.ts  useTugboatsInput.ts
test-bun-react/: .tugboats-mount-wrapper.js  app.tsx  package.json  tugboats.tsx  vite.config.mjs
test-bun-react/.tugboats-dist/: reactapp-dev.js
test-bun-react/.tugboats-dist/.vite/: manifest.json
test-bun-svelte/: App.svelte  README.md  package.json
test-deno-react/: app.tsx  deno.json
test_gleam/: gleam.toml  manifest.toml
test_gleam/src/: test_gleam.gleam
test_mini_react/: package-lock.json  package.json  tugboats.tsx  vite.config.mjs
test_mini_react/.tugboats-dist/: reactapp-dev.js
test_mini_react/.tugboats-dist/.vite/: manifest.json
test_mini_svelte/: App.svelte  package.json  tugboats.ts
